bugfix: vertical height problem on mobile screens

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 
 .viewport {
     width: 100%;
-    height: 100vh;
+    height: 100%;
 
     padding: 20px;
 
